# Doti

./: .gitignore  01-core-api.md  02-config-format.md  03-automation.md  BRAND.md  DISCUSSION-INTERACTION-MODEL.md  README.md  opencode.json
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agent/: conversation.py  provider_client.py  runtime.py
backend/app/api/rest/: routes.py
backend/app/api/ws/: connection_manager.py  handlers.py  protocol.py  router.py
backend/app/automation/: event_queue.py  routines.py  triggers.py
backend/app/core/: audit.py  models.py
backend/app/core/config/: loader.py  models.py  runtime_config.py
backend/app/executor/: manager.py
backend/app/memory/: context_builder.py  store.py
backend/app/storage/: message_store.py  thread_store.py
backend/app/tools/: base.py  registry.py
backend/app/tools/builtins/: executor_tool.py  filesystem.py  shell.py
backend/data/: main.jsonl
backend/tests/: test_approval.py  test_automation.py  test_message_store.py  test_protocol.py  test_thread_store.py  test_threads_api.py  test_tools.py  test_ws_endpoint.py
executor/: Dockerfile  pyproject.toml
executor/executor/: server.py
executor/executor/tools/: filesystem.py  shell.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: index.css
frontend/src/app/: App.tsx
frontend/src/state/: chatStore.ts  (+1 more)
plans/: config-overhaul.md  executor-architecture.md  phase2-persistence.md  phase3-tools.md  remaining-tasks.md  shell-security.md
(+9 files in other folders)
