[project]
name = "doti-executor"
version = "0.1.0"
description = "DOTI workspace executor — MCP server running inside Docker"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
doti-executor = "executor.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
